<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="20dp"
    android:paddingBottom="20dp">

    <TextView
        android:id="@+id/textview_item_docs_detail_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/notosans_regular"
        android:textColor="@color/black"
        android:textSize="@dimen/large"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="기후변화협약 이행" />

    <TextView
        android:id="@+id/textview_item_docs_detail_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/notosans_regular"
        android:textColor="@color/darkGray"
        android:textSize="@dimen/small"
        app:layout_constraintBottom_toBottomOf="@id/textview_item_docs_detail_title"
        app:layout_constraintStart_toEndOf="@id/textview_item_docs_detail_title"
        tools:text="00:01" />

    <TextView
        android:id="@+id/textview_item_docs_detail_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/notosans_regular"
        android:lineSpacingExtra="4dp"
        android:textColor="@color/black"
        android:textIsSelectable="true"
        android:textSize="@dimen/normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/textview_item_docs_detail_title"
        app:layout_constraintTop_toBottomOf="@id/textview_item_docs_detail_title"
        tools:text="유엔기후변화회의(UNFCCC,  UN  Framework  Con-vention  on  Climate  Change  2015)에서 체결된 파리협정은 지구의 평균기온 상승을 산업화 이전 대비  2 oC보다  상당히  낮은  수준(well  below  2oC)으로  유지하고,  기온 상승을  1.5 oC로 제한하도록 노력할 것을 규정하고  있으며,  기후변화협약의  이행을  증진함에  있어 기후변화의 위협에 대한 범지구적 대응 강화를 목표로 선언하고 있다. 이와 관련하여 최근 기후변화에관한 정부간 협의체(IPCC)는  ‘ 지구온난화  1.5 oC 특별보고서’를 공개하였다." />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview_item_comments"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:padding="8dp"
        android:visibility="gone"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textview_item_docs_detail_description"
        tools:visibility="visible"
        tools:listitem="@layout/item_comment"/>

</androidx.constraintlayout.widget.ConstraintLayout>