...
        android:layout_height="72dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/image_button_docs_back"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:background="@null"
            android:layout_marginStart="24dp"
            android:layout_centerVertical="true"
            android:clickable="true"
...
            android:layout_marginRight="15dp"
            android:textColor="@color/black"
            android:textSize="@dimen/normal"
            android:textStyle="bold"
            android:ellipsize="end"
            android:maxLines="1"
            android:layout_toStartOf="@+id/imageview_docs_more"
            android:layout_toEndOf="@id/image_button_docs_back"
            android:layout_centerVertical="true"
            tools:text="지구온난화 시나리오 기반의 동아시아 기후변화 분석" />

        <ImageView
            android:id="@+id/imageview_docs_more"
...
            android:text="정리"
            android:layout_weight="1"
            style="@style/GlobaButton"/>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview_docs_detail"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scrollbarFadeDuration="0"
        android:scrollbars="vertical"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
...
